Apply bug fix to misaligned title and flip product cards bug fix: extra title prop in shop-product removed

--- a/src/style/shop/shop-product.scss
+++ b/src/style/shop/shop-product.scss
@@ -1,4 +1,52 @@
+//Place front and back on top of each other
 .shop-product {
+  display: grid;
+  grid-template-rows: 1/-1;
+  grid-template-columns: 1/-1;
+
+  & > * {
+    grid-row: 1/-1;
+    grid-column: 1/-1;
+  }
+}
+//card flip
+.shop-product {
+  display: grid;
+
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  &__front,
+  &__back {
+    backface-visibility: hidden;
+    transition: all 0.3s ease;
+  }
+  &__back {
+    transform: rotateY(-180deg);
+  }
+  &:hover &__front {
+    transform: rotateY(180deg);
+  }
+  &:hover &__back {
+    transform: rotateY(0deg);
+  }
+}
+.shop-product__front {
+  height: 314px;
+  width: 240px;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  &__img {
+  }
+  &__title {
+    color: #333;
+    font-size: 18px;
+    font-family: "Titillium Web", sans-serif;
+    //  text-align: center;
+  }
+}
+
+.shop-product__back {
   height: 314px;
   width: 240px;
   background-color: white;
